--- a/src/experior/app/assets/stylesheets/application.scss
+++ b/src/experior/app/assets/stylesheets/application.scss
@@ -1,13 +1,37 @@
+/**
+ * Liberally inspired by:
+ *   Bootstrap 5 (https://github.com/twbs/bootstrap)
+ *   TailwindCSS (https://github.com/tailwindlabs/tailwindcss)
+ */
+
 html {
     font-size: 100%;
     -webkit-font-smoothing: antialias;
+    background-color: var(--background-color);
 }
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
+    min-height: 100vh;
+    color: var(--copy-color);
 }
 
 h1, h2, h3, h4, h5, h6, p {
     margin-top: 0;
+    font-weight: 500;
 }
+
+label {
+    display: block;
+    margin-bottom: 0.25rem;
+    font-size: 0.9rem;
+    font-weight: 500;
+}
+
+@import "vars";
+@import "common";
+@import "components/alerts";
+@import "components/buttons";
+@import "components/forms";
+@import "modules/signin";
