--- a/src/experior/app/assets/stylesheets/common.scss
+++ b/src/experior/app/assets/stylesheets/common.scss
@@ -10,6 +10,10 @@
     text-align: right;
 }
 
+.text-xxl {
+    font-size: 3.5rem;
+}
+
 .d-flex {
     display: flex;
 }
@@ -32,6 +36,14 @@
 
 .mb-2 {
     margin-bottom: 2rem;
+}
+
+.ml-auto {
+    margin-left: auto;
+}
+
+.ml-1 {
+    margin-left: 1rem;
 }
 
 .space-y-1 > * {
