--- a/src/nubes/app/assets/stylesheets/common.scss
+++ b/src/nubes/app/assets/stylesheets/common.scss
@@ -38,6 +38,14 @@
     margin-bottom: 2rem;
 }
 
+.mt-1 {
+    margin-top: 1rem;
+}
+
+.mt-2 {
+    margin-top: 2rem;
+}
+
 .ml-auto {
     margin-left: auto;
 }
