--- a/src/nubes/app/assets/stylesheets/vars.scss
+++ b/src/nubes/app/assets/stylesheets/vars.scss
@@ -18,6 +18,9 @@
     --rgb-primary: 26, 112, 240;
     --rgb-primary-dark-1: 15, 100, 224;
     --rgb-primary-dark-2: 13, 88, 200;
+    --rgb-secondary: 92, 100, 106;
+    --rgb-secondary-dark-1: 83, 90, 95;
+    --rgb-secondary-dark-2: 74, 80, 85;
     --rgb-error: 255, 100, 100;
 
     --rgb-gold: 110, 105, 40;
