--- a/src/nubes/app/assets/stylesheets/components/forms.scss
+++ b/src/nubes/app/assets/stylesheets/components/forms.scss
@@ -9,6 +9,7 @@
     box-sizing: border-box;
     background-color: transparent;
     color: rgb(var(--rgb-light-text));
+    font-family: inherit;
 
     &:focus {
         border-color: transparent;
@@ -25,6 +26,11 @@
         -webkit-box-shadow: 0 0 0 30px rgb(var(--rgb-gold)) inset !important;
         -webkit-text-fill-color: rgb(var(--rgb-light-text));
     }
+}
+
+select.text-control {
+    padding-top: (0.375rem + px(2.75));
+    padding-bottom: (0.375rem + px(2.75));
 }
 
 .invalid-field {
