--- a/src/nubes/app/assets/stylesheets/components/buttons.scss
+++ b/src/nubes/app/assets/stylesheets/components/buttons.scss
@@ -6,6 +6,7 @@
 
     display: inline-flex;
     align-items: center;
+    justify-content: center;
     padding: 0.625rem 1.5rem;
 
     border: px(1) solid transparent;
