--- a/src/nubes/app/assets/stylesheets/modules/profile.scss
+++ b/src/nubes/app/assets/stylesheets/modules/profile.scss
@@ -57,3 +57,28 @@
         font-style: italic;
     }
 }
+
+.qr-modal-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(black, .3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+        max-width: 100%;
+    }
+}
+
+.qr-modal-body {
+    margin: 0 1rem;
+    max-width: 40rem;
+
+    background-color: white;
+    border-radius: 1rem;
+    padding: 1rem;
+}
