--- a/src/nubes/app/assets/stylesheets/application.scss
+++ b/src/nubes/app/assets/stylesheets/application.scss
@@ -31,6 +31,10 @@ p, ul {
     line-height: 1.4;
 }
 
+a {
+    color: var(--link-color);
+}
+
 label {
     display: block;
     margin-bottom: 0.25rem;
